--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button{
     height: 45px;
     width: 170px;
     padding: 10px;
-    border: 1px solid #8b5cf6;
+    border: 1px solid #2b8de1;
     background-color: transparent;
     color: #ffffff;
     position: relative;
@@ -41,7 +41,7 @@ button{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    background-color: #8b5cf6;
+    background-color: #2b8de1;
 }
 
 main{
@@ -58,13 +58,13 @@ input{
     width: 64px;
     height: 64px;
     border-radius: 5px;
-    border: 1px solid #8b5cf6;
+    border: 1px solid #2b8de1;
     background-color: #0000005b;
 }
 
 input:checked{
-    background-color:  #8b5cf6;
-    border: 2px solid #8b5cf6;
+    background-color:  #2b8de1;
+    border: 2px solid #2b8de1;
 }
 
 p{
